# littlenode_mqtt_esp32

./: .gitignore
doc/: 一些文字.md  文字图片.ai  章节.html  章节.md
hardware/: BOM_Board1_Schematic1_2023-05-08 (1).xlsx
littlenode_mqtt_esp32c3_prj/: CMakeLists.txt  sdkconfig
littlenode_mqtt_esp32c3_prj/components/SHT20/: CMakeLists.txt  SHT20.c  SHT20.h  sht20_app.c  sht20_app.h  sht20_driver.c
littlenode_mqtt_esp32c3_prj/components/led_state/: CMakeLists.txt  led_app.c  led_app.h  led_driver.c  led_driver.h
littlenode_mqtt_esp32c3_prj/components/mqtt_app/: CMakeLists.txt  mqtt_app.c  mqtt_app.h
littlenode_mqtt_esp32c3_prj/components/user_iic/: CMakeLists.txt  user_iic.c
littlenode_mqtt_esp32c3_prj/components/wifi_connect/: CMakeLists.txt  wifi_connect.c  wifi_connect.h
littlenode_mqtt_esp32c3_prj/main/: CMakeLists.txt  app_main.c
